css/main.css
/*
 *	SITE-WIDE DECLARATIONS
 */

html {
	margin: 0;
	padding: 0;
	line-height: 1.6;
	letter-spacing: .06em;
	font-size: 100%;

	height: 100%;
}

body {
	background-color: black;
	margin: 0;
	padding: 0;

	font-family: 'Raleway Light', 'Raleway', sans-serif;
	font-size: 1rem;
	font-weight: 200;
	line-height: 1.54;
	color: #d9d9d9;

	display: flex;
	flex-direction: column;

	height: 100%;

	-webkit-font-smoothing: antialiased;
	-webkit-overflow-scrolling: touch;
	-webkit-text-size-adjust: 100%;
}

p {
	font-family: 'Open Sans';
	font-size: 1.1em;
	margin: 0 2rem;
	text-align: left;
}

hr {
	margin-left: 2rem;
	text-align: left;
	width: 5em;
	margin-bottom: 2.5em;
}

h1 {
	font-family: 'Raleway';
	font-weight: 200;
	letter-spacing: 0.125em;
	font-size: 3.625em;
	margin-bottom: 0;
}

h2 {
	letter-spacing: 0.125em;
	font-size: 3em;
	font-weight: 200;
	margin-bottom: 0;
	margin-left: 2rem;
}

h3 {
	font-size: 1.375rem;
	margin-left: 2rem;
}


h4 {
	font-size: 2em;
	letter-spacing: 0.125em;
	margin-left: 2rem;
}

h5 {
	font-size: 1.25em;
	letter-spacing: 0.125em;
	margin-left: 2rem;
}

h2, h3, h4, h5, h6 {
	display: flex;
	align-items: center;
	line-height: 1.3;
}

a {
	color: inherit;
	text-decoration: inherit;
}

a:hover {
	color: #ee7777;
	transition: color .2s ease;
	-webkit-transition: color .2s ease;
}

i {		/* Icons */
	margin: 0 1ex;
}




/*
 *	HEADER & FOOTER
 */

header {	/* The whole header */
	padding: .75em 1em;
	background-color: black;
}

.nav {		/* Technically all navigators but also the header one */
	font-family: 'Raleway', sans-serif;
}

nav.main-nav {	/* Header navigation menu */
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 0 1em;
}

#new-menu a {
	letter-spacing: 0.125em;
	margin-left: 1em;
	line-height: 3;
}

.nl {
	position: relative;
	transition: .3s;
}

.nl .iicon {
	display: none;
	transition: .3s;
	position: absolute;
	top: 1.55rem;
	right: 1rem;
	margin-top: -1.625rem;
}

.nl#hamburger {
	display:none;
}

.nl.morphed #hamburger {
	transform: rotate(0.5turn);
	opacity: 0;
}

.nl #close {
	opacity: 0;
}

.nl.morphed #close {
	transform: rotate(0.5turn);
	opacity: 1;
}

@media only screen and (max-width: 600px) {
	.nl .iicon {
		display: inline-block;
	}
	.nl a:hover {
		color: inherit;
	}
	#hamburger {
		font-size: 1.625rem;
	}
	#close {
		font-size: 1.625rem;
	}
}

#name {		/* Home link/name/logo on the LHS */
	font-weight: bold;
	display: flex;
	align-items: center;
	line-height: 1.3;
	font-size: 1.375rem;
	letter-spacing: 0.25em;
	margin-top:1em;
	margin-bottom: 1em;
	margin-left: 0;
	margin-right: 0;
	float: left;
}

.nl {		/* Navigation links container */
	display: inline-block;
	letter-spacing: 0.125em;
}

.nl a{		/* Navigation links themselves */
	margin-left: 1em;
}

.nl .icon {
	display: none;
}

.active {
	display: block;
}

footer {	/* The whole footer */
	flex-shrink: 0;
}

footer p {	/* The text in the footer */
	text-align: center;
	letter-spacing: .5ex;
	font-size: 0.825em;
}



/* 
 *	HOMEPAGE
 */

.home-bg {	/* Background image and container */
	background-image: url("../ArtsyMeHalf.jpg");
	background-repeat: no-repeat;
	background-position: right;
	background-size: cover;
	background-color: black;

	text-align: center;
	justify-content: center;
}

.content {	/* Container for the main page content & footer */
	display: flex;
	flex-direction: column;
	flex: 1 auto;
	align-items: center;
	justify-content: center;
	overflow: hidden;
}

#social {	/* Index contact icons links */
	font-size: 24pt;
	margin: 0 0 .325rem 0;
	padding: 0;
}

#social a {
	padding: 0 1rem;
}


#title {	/* Big title header */
	letter-spacing: .25em;
	text-align: center;	
	margin-right: 0;
	padding: 0;
}

#subtitle {	/* Position/tagline/etc. under the title */
	letter-spacing: .25em;
	margin: 0 0 1.5em 0;
	padding: 0;
	text-align: center;
}


.home-nav {	/* Navigation links on the homepage */
	font-family: 'Open Sans Light', 'Open Sans', 'Roboto', sans-serif;
	font-size: 1.2em;
	letter-spacing: .5ex;
	line-height: 2;
	margin: 0;
}

@media only screen and (max-width: 600px) {
	.home-nav {
		line-height: 2.5;
		font-size: 1.325em;
	}
}



/*
 *	ABOUT PAGE
 */

.about-content {/* Container for the bio/pic/etc */
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
}

.about-text {	/* Container for bio text */
	max-width: 100%;
	flex: 1;
}

.about-img {	/* Container for the bio image */
	width: 100%;
	flex: 1;
}

#me {		/* The actual bio image */
	max-width: 100%;
}

@media only screen and (max-width: 600px) {
	.about-content {
		flex-wrap: wrap;
	}
	.about-text {
		max-width: 100%;
	}
	.about-img {
		max-width: 100%;
		flex-basis: 100%;
	}
}



/*
 *	PORTFOLIO PAGE
 */

.portfolio {	/* Container for main page content (not including title) */
	display: flex;
	flex-direction: column;
	align-items: space-between;
	margin: 0 5rem 5rem 5rem;
}


.port-item {	/* Container for each project, containing image and text */
	position: relative;
	display: flex;
	align-items: center;
	margin: 1em;
	border-radius: 1ex;
	background-color: #111
}

.port-item:hover {/* Each item should slowly get a little bigger on hover */
	transform: scale(1.01,1.01);
	transition: all 0.3s ease;
}

.port-overlay {	/* Overlay that covers port-item and changes on hover */
	position:absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	border: solid 1px black;
}

.port-overlay:hover {		/* Overlay should slowly get darker on hovr */
	background-color: rgba(255,255,255,0.0625);
	transition: all 0.3s ease;
	border: 1px solid #111;
	border-radius: 1ex;
}

.port-hidden {	/* Hidden text that gives a brief 1-2 sentence description */
	display: none;
	margin-left: 0;
}

.port-item:hover .port-hidden {	/* Show hidden text on hover */
	display: -webkit-box;
	overflow: hidden;
	-webkit-line-clamp: 2;
	-webkit-box-orient: vertical;
}

.port-item:hover .port-img {
	border-radius: 1ex 0 0 1ex;
}

.port-img {	/* Image for each portfolio item */
	width:  100%;
	border-radius: 1ex 0 0 1ex;
}

.port-textbox {	/* Text box containing title and hidden text for each portfolio item */
	display: flex;
	flex-grow: 2;
	min-width: 50%;
	flex-direction: column;
	align-items: flex-start;
	padding-left: 1em;
	overflow: hidden;
	text-overflow: ellipsis;
	margin-left: 1em;
}

@media screen and (max-width: 600px) {
	.portfolio {
		margin: 1rem;
	}
	.port-item:active .port-hidden {
		display: none;

	}
}



/*
 *	PROJECT PAGES
 */

.supper-bg {	/* Just the background for the Unsettled Supper one */
	background-image: url("../supper/supper-bg2.jpg");
	background-repeat: no-repeat;
	background-position: right top;
	background-size: cover;
}

.show-content {	/* Main container for the project pages, excluding title */
	display: flex;
	flex-direction: column;
	flex: 1 auto;
	align-items: flex-start;
	justify-content: center;
	overflow: hidden;
}

.gallery-row {	/* Each row of the gallery (container for the columns) */
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	justify-self: center;
	padding: 0 4px;
	margin: 0 2rem;
	width: 100%;
}

.gallery-col {	/* Each column of the gallery (container for imgs) */
	flex: 25%;
	max-width: 25%;
	padding: 0 4px;
	background-color: rgba(0,0,0,0.5);
}

.gallery-col a {
	display: block;
	overflow: hidden;
}

.gallery-col img { /* Each image in the gallery */
	transition: all 0.3s ease;
	margin-top: 8px;
	vertical-align: middle;
	width: 100%;
}

.gallery-col img:hover { /* Make the images get a littl bigger when you hover over them */
	transform: scale(1.1,1.1);
}

.gallery-label {	/* The section title for the gallery */
	background-color: rgba(0,0,0,0.75);
}

@media screen and (max-width: 600px) {
	.supper-bg{
		background-image: none;
	}
	.gallery-col {
		flex: 100%;
		max-width: 100%;
	}
}

@media screen and (max-width: 800px) {
	.gallery-col {
		flex: 50%;
		max-width: 50%;
	}
}



/*
 *	RESUME PAGE
 */

.resume-full {
	flex: 1 0 auto;
}

.resume-content { /* Main container for the page (excluding title) */
	display: flex;
	flex-direction: column;
	align-items: center;
	max-height: 100%;
	height: 100%;
	justify-content: center;
	overflow: hidden;
}

.pdf {		/* Spacing for the resume itself */
	border: none;
	width: 90%;
	height: 100%;
	margin: 0;
	padding: 0;
}
@media only screen and (max-width: 600px) {
	.resume-bg h2{
		margin-left: 2rem;
	}
	.resume-bg hr {
		margin-left: 2rem;
	}
	.resume-content{
		margin: 0 2em 0 4em;
		text-align: center;
	}
}



/*
 *	CONTACT PAGE
 */

.contact-full {	/* Full page container (for the footer to work right) */
	flex: 1 0 auto;
}

.contact {	/* Main page container (excluding title) */
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	margin-left: 20%;
	margin-right: 20%;
	padding: 3rem 4rem 0 4rem;
	background-color: #202020;
	border-radius: 4px;
}

.contact label {
	letter-spacing: .2em;
}

.contact input[type=text], input[type=email], textarea {
	padding: 12px;
	width: 100%;
	border: 1px solid #ccc;
	border-radius: 4px;
	box-sizing: border-box;
	margin-top: 6px;
	margin-bottom: 16px;
	resize: vertical;
}

.contact textarea {
	height: 15em;
}

.contact button {
	background-color: #bb4444;
	color: white;
	padding: 12px 20px;
	border: none;
	border-radius: 4px;
	cursor: pointer;
}

.contact button:hover {
	background-color: #ee7777;
	transition: all .4s ease;
}

.contact-social {
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-between;
	align-items: center;
	margin: 4rem 0;
	font-size: 24pt;
}

svg:hover path {
	fill: #ee7777;
	transition: all .2s ease;
}

#contact-submit {
	font-family: 'Raleway';
	letter-spacing: .1em;
	word-spacing: .5em;
	vertical-align: middle;
}

@media only screen and (max-width: 600px) {
	.contact-bg{
		background-image: none;
	}
	.contact{
		display: flex;
		align-items: center;
		justify-content: space-between;
		margin: 0 2.5rem;
		padding: 2em 7.5% 0 7.5%;
	}
	.contact button {
		width: 100%;
	}
}

